# qfinlib-toolkit

./: .gitignore  Dockerfile  README.md  compose.sh  docker-compose.yml  launch.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-pypi.yml
apps/: cli.py
apps/common/: data.py
apps/market_monitor/: __main__.py  swap_rate_monitor.py
apps/portal/: __main__.py
apps/strategy_lab/: __main__.py
apps/trade_pricing/: __main__.py
